--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 #naglowek_1 {text-align:center; font-weight:bold; color:#000000; background-color: rgba(176, 170, 166, 1);}
 #naglowek_2 {text-align:center; font-weight:bold; color:#000000; background-color: rgba(176, 170, 166, 1);}
 
-.tekst { text-align:left; background-color:}
+.tekst { text-align:left; background-color:white;}
 </style>
 
 <title>Tabelka w html</title>
