--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<td>Numer</td><td>Zdjęcie</td><td>Nazwa</td><td>Marka</td><td>Nadwozie</td><td>Silnik</td><td>Moc silnika</td><td>Produkowany</td>
 	</tr>
 	<tr class="tekst">
-		<td  style="text-align:center;">1.</td><td style="text-align:center;"><img class="obrazek" src="https://cloud.githubusercontent.com/assets/138824/6326175/32e46b14-bb4f-11e4-9f14-78d49648e990.jpg"/></td><td>Citan kombi 108</td><td>Mercedes</td><td>Kombi</td><td>108 CDI 75KM</td><td>75KM przy 4000obr/min</td><td>od 2012 roku</td>
+		<td  style="text-align:center;">1.</td><td style="text-align:center;"></td><td>Citan kombi 108</td><td>Mercedes</td><td>Kombi</td><td>108 CDI 75KM</td><td>75KM przy 4000obr/min</td><td>od 2012 roku</td>
 	</tr>
 
 	</tr>
@@ -37,3 +37,4 @@
 </table>
 </body>
 </html>
+
