--- a/index.html
+++ b/index.html
@@ -2,39 +2,30 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<style>
-#tabela  { width:900px;}
-#tabela td{ border:1px solid; padding:5px;}
 
-.obrazek { width:100px; }
-
-#naglowek_1 {text-align:center; font-weight:bold; color:#000000; background-color: rgba(176, 170, 166, 1);}
-#naglowek_2 {text-align:center; font-weight:bold; color:#000000; background-color: rgba(176, 170, 166, 1);}
-
-.tekst { text-align:left; background-color:white;}
-</style>
 
 <title>Tabelka w html</title>
 </head>
 <body>
-<table id="tabela">
-		<tr id="naglowek_1">
-		<td colspan="2">Dodatki</td><td colspan="6">Dane techniczne</td>
+<table width="900px" align="center" style="border:1px solid;">
+<caption><font size="20">Tabelka przykładowa w HTML</font></caption>
+<thead bgcolor="grey"  border="1">
+		<tr>
+		<th colspan="2" >Dodatki</th><th colspan="6">Dane techniczne</th>
 	</tr>
-	<tr id="naglowek_2">
-		<td>Numer</td><td>Zdjęcie</td><td>Nazwa</td><td>Marka</td><td>Nadwozie</td><td>Silnik</td><td>Moc silnika</td><td>Produkowany</td>
+	<tr style="border:1px solid;">
+		<th>Numer</th><th>Zdjęcie</th><th>Nazwa</th><th>Marka</th><th>Nadwozie</th><th>Silnik</th><th>Moc silnika</th><th>Produkowany</th>
 	</tr>
-	<tr class="tekst">
-		<td  style="text-align:center;">1.</td><td style="text-align:center;"></td><td>Citan kombi 108</td><td>Mercedes</td><td>Kombi</td><td>108 CDI 75KM</td><td>75KM przy 4000obr/min</td><td>od 2012 roku</td>
+</thead>
+	<tr>
+		<td align="center">1.</td><td style="text-align:center;"><img width="150px" src="https://cloud.githubusercontent.com/assets/138824/6326175/32e46b14-bb4f-11e4-9f14-78d49648e990.jpg"/></td><td>Citan kombi 108</td><td>Mercedes</td><td>Kombi</td><td>108 CDI 75KM</td><td>75KM przy 4000obr/min</td><td>od 2012 roku</td>
 	</tr>
 
-	</tr>
-	<tr class="tekst">
-		<td  style="text-align:center;">1.</td><td style="text-align:center;"><img class="obrazek" src="https://cloud.githubusercontent.com/assets/138824/6326204/88691382-bb4f-11e4-93b3-16d1d7389c79.jpg"/></td><td>Citan kombi 108</td><td>Mercedes</td><td>Kombi</td><td>108 CDI 75KM</td><td>75KM przy 4000obr/min</td><td>od 2012 roku</td>
+	<tr>
+		<td  align="center">2.</td><td><img width="150px" src="https://cloud.githubusercontent.com/assets/138824/6326204/88691382-bb4f-11e4-93b3-16d1d7389c79.jpg"/></td><td>Volkswagen Bora Kombi 2</td><td>Volkswagen</td><td>Kombi</td><td>2.3 i V5motion 170KM</td><td>170KM przy 6200obr./min</td><td>od 2000 do 2005r</td>
 	</tr>	
 
 
 </table>
 </body>
 </html>
-
