--- a/tabelka_zad1.html
+++ b/tabelka_zad1.html
@@ -7,7 +7,7 @@
 <title>Tabelka w html</title>
 </head>
 <body>
-<table width="900px" align="center" style="border:1px solid;">
+<table width="900px" align="center" >
 <caption><font size="20">Tabelka przykładowa w HTML</font></caption>
 <thead bgcolor="grey"  border="1">
 		<tr>
